--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="icon" href="image/logo_01.png" type="image/png"">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="logo_01.png" type="image/png"">
   </head>
   <body>
 
@@ -72,7 +72,7 @@
           </div>
           <div class="hero-image">
             <div class="hero-img-wrapper">
-              <img src="/image/logo_01.png" alt="امیرحسین ولیزاده ارجمند " />
+              <img src="logo_01.png" alt="امیرحسین ولیزاده ارجمند " />
               <div class="hero-shape"></div>
             </div>
           </div>
@@ -270,7 +270,7 @@
           <div class="project-card" data-category="web">
             <div class="project-img">
               <img
-                src="image/Leather-Industries-Web-Design-fe.jpg"
+                src="Leather-Industries-Web-Design-fe.jpg"
                 alt="پروژه فروشگاه اینترنتی"
               />
               <div class="project-overlay">
@@ -297,7 +297,7 @@
           <!-- پروژه ۳ -->
           <div class="project-card" data-category="design">
             <div class="project-img">
-              <img src="image/type-speed.jpg" alt="پروژه تست سرعت تایپ " />
+              <img src="type-speed.jpg" alt="پروژه تست سرعت تایپ " />
               <div class="project-overlay">
                 <div class="project-links">
                   <a href="https://mr-n3xus.github.io/Timer/" target="_blank"
@@ -320,7 +320,7 @@
           <!-- پروژه ۴ -->
           <div class="project-card" data-category="web">
             <div class="project-img">
-              <img src="image/logo_01.png" alt="پروژه سایت شخصی" />
+              <img src="logo_01.png" alt="پروژه سایت شخصی" />
               <div class="project-overlay">
                 <div class="project-links">
                   <a href="#" target="_blank"><i class="fab fa-github"></i></a>
@@ -341,7 +341,7 @@
           <!-- پروژه ۵ -->
           <div class="project-card" data-category="app">
             <div class="project-img">
-              <img src="image/vibrant-python-logo-amidst-dynam.jpg" alt="پروژه یافتن رمز عبور"/>
+              <img src="vibrant-python-logo-amidst-dynam.jpg" alt="پروژه یافتن رمز عبور"/>
               <div class="project-overlay">
                 <div class="project-links">
                     <a href="https://github.com/Mr-N3XUS/Pass-Cracker" target="_blank" id="alone"><i class="fab fa-github"></i> </a>
@@ -361,7 +361,7 @@
           <div class="project-card" data-category="design">
             <div class="project-img">
               <img
-                src="image/Wood-industry-logo-design-6.jpg"
+                src="Wood-industry-logo-design-6.jpg"
                 alt="پروژه طراحی سایت صنایع چوبی"
               />
               <div class="project-overlay">
@@ -524,3 +524,4 @@
     <script src="js/script.js"></script>
   </body>
 </html>
+
