--- a/index.html
+++ b/index.html
@@ -521,8 +521,9 @@
     </button>
 
     <!-- اسکریپت اصلی -->
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
+
 
 
